--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^12.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-firebase-hooks": "^5.1.1",
+    "@apollo/client": "^3.13.9",
+    "@nhost/nhost-js": "^3.3.0",
+    "@nhost/react": "^3.11.1",
+    "framer-motion": "^12.23.12",
+    "graphql": "^16.11.0",
+    "graphql-ws": "^6.0.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
